--- a/com_easysocial_full_pro_1/setup/packages/com_easysocial_1.4.7_component_pro/site/themes/elegant/styles/component.css
+++ b/com_easysocial_full_pro_1/setup/packages/com_easysocial_1.4.7_component_pro/site/themes/elegant/styles/component.css
@@ -5656,6 +5656,9 @@ div#fd.es .icon-es-empty-group,
 div#fd.es .icon-es-empty-event {
   background-position: -240px -112px;
 }
+div#fd.es .icon-es-empty-project {
+  background-position: -240px -112px;
+}
 div#fd.es .icon-es-empty-photo {
   background-position: -288px -112px;
 }
