--- a/com_easysocial_full_pro_1/setup/packages/com_easysocial_1.4.7_component_pro/site/themes/wireframe/styles/apps/widgets.less
+++ b/com_easysocial_full_pro_1/setup/packages/com_easysocial_1.4.7_component_pro/site/themes/wireframe/styles/apps/widgets.less
@@ -36,6 +36,29 @@
 				}
 			}
 		}
+		&.widget-projects {
+			.widget-list {
+
+				li {
+					margin-right: 10px;
+					margin-bottom: 3px;
+
+					+li {
+						padding-top: 8px;
+						border-top: 1px solid @esBorder;
+						margin-top: 5px;
+					}
+
+					.project-meta,
+					.group-meta {
+						>a {
+							color: @esColor;
+							font-size: @fontSizeSmall;
+						}
+					}
+				}
+			}
+		}
 	}
 }
 
