--- a/com_easysocial_full_pro_1/setup/packages/com_easysocial_1.4.7_component_pro/site/themes/elegant/styles/blocks.css
+++ b/com_easysocial_full_pro_1/setup/packages/com_easysocial_1.4.7_component_pro/site/themes/elegant/styles/blocks.css
@@ -2229,10 +2229,10 @@ div#fd.es .social-integrations .yesno-list > li:after {
 div#fd.es .social-integrations .yesno-list > li:after {
   clear: both;
 }
-div#fd.es .es-events-counter {
+div#fd.es .es-projects-counter .es-events-counter {
   color: #999999;
 }
-div#fd.es .es-events-counter .es-events-counter-bg {
+div#fd.es .es-events-counter .es-projects-counter .es-projects-counter-bg .es-events-counter-bg {
   border: 1px solid #d7d7d7;
   border-radius: 3px;
   padding: 5px;
@@ -2240,11 +2240,11 @@ div#fd.es .es-events-counter .es-events-counter-bg {
   color: #666;
   margin-bottom: 5px;
 }
-div#fd.es .es-events-counter .es-events-counter-title {
+div#fd.es .es-events-counter .es-projects-counter .es-projects-counter-title .es-events-counter-title {
   font-size: 12px;
   line-height: 14px;
 }
-div#fd.es .es-events-counter .es-events-counter-total {
+div#fd.es .es-events-counter .es-projects-counter .es-projects-counter-total .es-events-counter-total {
   font-size: 16px;
   line-height: 32px;
 }
@@ -2947,18 +2947,18 @@ div#fd.es-widget-calendar .day a::-moz-focus-inner {
 div#fd.es-widget-calendar .day.old:hover {
   background: none;
 }
-div#fd.es-widget-calendar .day.has-events {
+div#fd.es-widget-calendar .day.has-projects .day.has-events {
   font-weight: bold;
   background: #f5f5f5 !important;
   color: #666;
 }
-div#fd.es-widget-calendar .day.has-events * {
+div#fd.es-widget-calendar .day.has-projects .day.has-events * {
   cursor: pointer;
 }
-div#fd.es-widget-calendar .day.has-events a {
+div#fd.es-widget-calendar .day.has-projects .day.has-events a {
   position: relative;
 }
-div#fd.es-widget-calendar .day.has-events a:before {
+div#fd.es-widget-calendar .day.has-projects .day.has-events a:before {
   content: '';
   position: absolute;
   width: 6px;
@@ -2974,6 +2974,9 @@ div#fd.es-widget-calendar .day.is-today {
   background-color: #E9EFF7;
 }
 div#fd.es-widget-calendar .event-details {
+  display: none;
+}
+div#fd.es-widget-calendar .project-details {
   display: none;
 }
 div#fd.mod-easyblogcalendar .es-widget-calendar a {
@@ -3019,3 +3022,45 @@ div#fd.popbox.popbox-events-calendar-filter .media-time {
   font-size: 11px;
   padding-right: 5px;
 }
+
+div#fd.popbox.popbox-projects-calendar-filter {
+  min-width: 160px;
+  max-width: 210px;
+}
+div#fd.popbox.popbox-projects-calendar-filter .project-details-title {
+  background: #f5f5f5;
+  color: #777;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 5px 10px;
+  border-radius: 3px 3px 0 0;
+}
+div#fd.popbox.popbox-projects-calendar-filter .list-media {
+  padding-bottom: 5px;
+}
+div#fd.popbox.popbox-projects-calendar-filter .list-media > li {
+  padding-left: 5px;
+  padding-top: 5px;
+}
+div#fd.popbox.popbox-projects-calendar-filter .list-media > li + li {
+  margin-top: 5px;
+}
+div#fd.popbox.popbox-projects-calendar-filter .list-media .media-object {
+  margin: 3px 10px 0 0;
+}
+div#fd.popbox.popbox-projects-calendar-filter .list-media .media-object img {
+  width: 100%;
+  height: 100%;
+}
+div#fd.popbox.popbox-projects-calendar-filter .list-media .media-body {
+  line-height: 16px;
+}
+div#fd.popbox.popbox-projects-calendar-filter .media-title * {
+  font-size: 12px;
+  font-weight: bold;
+}
+div#fd.popbox.popbox-projects-calendar-filter .media-time {
+  font-size: 11px;
+  padding-right: 5px;
+}
+
