--- a/com_easysocial_full_pro_1/setup/packages/com_easysocial_1.4.7_component_pro/site/themes/wireframe/styles/blocks/widget-calendar.less
+++ b/com_easysocial_full_pro_1/setup/packages/com_easysocial_1.4.7_component_pro/site/themes/wireframe/styles/blocks/widget-calendar.less
@@ -81,11 +81,40 @@
                 }
             }
         }
+        &.has-projects {
+            font-weight: bold;
+            background: @esWidgetDatetimepickerActiveBackground !important;
+            color: @esColor;
+
+            * { cursor: pointer; }
+
+            a {
+                position: relative;
+
+                &:before {
+                    content: '';
+                    position: absolute;
+                    width: 6px;
+                    height: 6px;
+                    display: block;
+                    right: 0;
+                    bottom: 0;
+
+                    border-style: solid;
+                    border-width: 0 0 6px 6px;
+                    border-color: transparent transparent #3FB576 transparent;
+
+                }
+            }
+        }
         &.is-today {
             background-color: #E9EFF7;
         }
     }
     .event-details { // popbox
+        display: none;
+    }
+    .project-details { // popbox
         display: none;
     }
 }
@@ -112,6 +141,52 @@
         // font-size: @baseFontSize;
     }
     .event-details-title {
+        background: #f5f5f5;
+        color: #777;
+        font-size: @baseFontSize;
+        font-weight: bold;
+        padding: 5px 10px;
+        border-radius: 3px 3px 0 0;
+    }
+    .list-media { // override
+        padding-bottom: 5px;
+        > li {
+            padding-left: 5px;
+            padding-top: 5px;
+            + li {
+                margin-top: 5px;
+                // padding-top: 5px;
+            }
+        }
+        .media-object {
+            margin: 3px 10px 0 0;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .media-body {
+            line-height: 16px;
+        }
+    }
+    .media-title * {
+        font-size: @baseFontSize;
+        font-weight: bold;
+    }
+    .media-time {
+        font-size: @fontSizeSmall;
+        padding-right: 5px;
+    }
+}
+
+&.popbox.popbox-projects-calendar-filter {
+    min-width: 160px;
+    max-width: 210px;
+
+    * {
+        // font-size: @baseFontSize;
+    }
+    .project-details-title {
         background: #f5f5f5;
         color: #777;
         font-size: @baseFontSize;
