working bottom up 7 - everything's good!

--- a/com_easysocial_full_pro_1/setup/packages/com_easysocial_1.4.7_component_pro/media/styles/icons-sprites.less
+++ b/com_easysocial_full_pro_1/setup/packages/com_easysocial_1.4.7_component_pro/media/styles/icons-sprites.less
@@ -357,8 +357,8 @@
 .icon-es-empty-event {
 	.spriteGrid( 16 , 8 );
 }
-.icon-es-empty-photo {
-	.spriteGrid( 19 , 8 );
+.icon-es-empty-project {
+	.spriteGrid( 16 , 8 );
 }
 .icon-es-empty-activity {
 	.spriteGrid( 22 , 8 );
