up to admin/themes/default/styles

--- a/com_easysocial_full_pro_1/setup/packages/com_easysocial_1.4.7_component_pro/admin/themes/default/styles/blocks.css
+++ b/com_easysocial_full_pro_1/setup/packages/com_easysocial_1.4.7_component_pro/admin/themes/default/styles/blocks.css
@@ -572,6 +572,12 @@ div#fd.es .es-event-labels .label {
   margin-bottom: 3px;
   text-shadow: none;
 }
+div#fd.es .es-project-labels .label {
+  display: inline-block;
+  font-size: 10px;
+  margin-bottom: 3px;
+  text-shadow: none;
+}
 div#fd.es .widget-box {
   background: #fff;
   border: 1px solid #BFCAD2;
