--- a/com_easysocial_full_pro_1/setup/packages/com_easysocial_1.4.7_component_pro/admin/themes/default/styles/blocks/default.less
+++ b/com_easysocial_full_pro_1/setup/packages/com_easysocial_1.4.7_component_pro/admin/themes/default/styles/blocks/default.less
@@ -705,6 +705,17 @@ div.es-sample
     }
 }
 
+// project state
+// ----------------
+.es-project-labels {
+	.label {
+		display: inline-block;
+		font-size: 10px;
+		margin-bottom: 3px;
+		text-shadow: none;
+	}
+}
+
 
 /* Simple widget box */
 .widget-box {
